--- a/index.Rmd
+++ b/index.Rmd
@@ -31,11 +31,11 @@ All source files are available at [https://github.com/ubco-biology/Procedures-an
 
 ## Why Procedures and Guidelines? {-}
 
-When we talk about procedures and guidelines, we\'re very much talking about standards and conventions. Standards and conventions allow the products of research to be easily consumed, interpreted, adapted and re-used. For example, the metric system did wonders for standardizing how we measure distances and weight. The chaos that would ensue if every entomologist took specimen measurements with their own system - or determined wing span from different points of origin across the same species!
+When we talk about procedures and guidelines, we\'re very much talking about standards and conventions. Standards and conventions allow the products of research to be easily consumed, interpreted, adapted and re-used. For example, the metric system did wonders for standardizing how we measure distances and weight. The chaos that would ensue if every entomologist took specimen measurements with their own system - or determined wingspan from different points of origin across the same species!
 
-Standards and conventions allow us to also explore our data and outputs to greater extents than historically possible by allowing us to leverage computers; computers rely on standards to parse and merge data. Without standardization in what and how markers of climate change are recorded, we would be unable to pool the massive amounts of data collected globally to build the understanding that we are for how our climate is changing.
+Standards and conventions allow us to explore our data and outputs to greater extents than historically possible by helping us leverage computers; computers rely on standards to parse and merge data. For instance, without the standardization of how markers of climate change are recorded, we would be unable to pool the massive amounts of globally collected data that is used to monitor and fight climate change.
 
-These qualities of standards and conventions - easy consumption, interpretation, adaptation, and re-use - are integral to robust, transparent, reproducible research; qualities that underpin the development of a strong evidence base on which to conduct further research and inform practices and policy.
+These qualities of standards and conventions - easy consumption, interpretation, adaptation, and re-use - are integral to robust, transparent, reproducible research; these qualities underpin the development of a strong evidence base on which to conduct further research and inform practices and policy.
 
 ## Structure {-}
 
